--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "tercerapre-entrega",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "directories": {
     "doc": "docs"
@@ -10,5 +9,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
